--- a/index.html
+++ b/index.html
@@ -2,7 +2,73 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
 </head>
 <body>
+  <div class="container">
+    <h1>Zero-Memo模糊背景產生器</h1>
+
+    <form id="form">
+      <h2>參數</h2>
+      <div class="form-group">
+        <label>
+          <p>原圖(河道背景圖)</p>
+          <input name="source" type="url" class="form-control" />
+        </label>
+      </div>
+      <div class="form-group">
+        <label>
+          資訊面板背景亮度
+          <input name="brightness[dashboard]" type="range" min="0" max="200" value="75" />
+        </label>
+        <label>
+          噗文背景亮度
+          <input name="brightness[plurk]" type="range" min="0" max="200" value="150" />
+        </label>
+      </div>
+      <button type="submit" class="btn btn-lg btn-primary">產生</button>
+    </form>
+    <hr />
+    <div>
+        <h2>生成物</h2>
+
+        <textarea id="result" class="form-control" style="max-height:500px;"></textarea>
+        <button id="copy" type="button" class="btn btn-default">點我複製</button>
+    </div>
+
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+  <script type="text/javascript">
+  (function() {
+      var BACKEND = "http://zero-memo-backend.herokuapp.com";
+
+      var form = document.getElementById('form');
+
+      var textarea = document.getElementById("result");
+
+      form.addEventListener('submit', function() {
+          var req = new XMLHttpRequest();
+          req.addEventListener('load', function(result) {
+              console.log(result);
+          });
+          req.open('POST', BACKEND + '/background-image');
+          req.send(new FormData(form));
+          return false;
+      });
+
+      document.getElementById("copy").onclick = function() {
+          textarea.select();
+          document.execCommand("copy");
+      }
+  }());
+  </script>
 </body>
 </html>
