--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="form-group">
         <label>
           <p>原圖(河道背景圖)</p>
-          <input name="source" type="url" class="form-control" />
+          <input name="source" type="url" class="form-control" required="required" />
         </label>
       </div>
       <div class="form-group">
