--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
+
   <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.serializeJSON/2.7.2/jquery.serializejson.min.js"></script>
 
   <script type="text/javascript">
   (function() {
@@ -61,7 +64,7 @@
       $('#form').submit(function(event) {
           event.preventDefault();
 
-          var data = $(this).serialize();
+          var data = $(this).serializeJSON();
 
           socket.emit('get css', data);
       });
