--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <div class="form-group">
         <label>
           資訊面板背景亮度
-          <input name="images[dashboard][brightness]" type="range" min="0" max="200" value="75" />
+          <input name="images[dashboard][brightness]:number" type="range" min="0" max="200" value="75" />
         </label>
         <label>
           噗文背景亮度
-          <input name="images[plurk][brightness]" type="range" min="0" max="200" value="150" />
+          <input name="images[plurk][brightness]:number" type="range" min="0" max="200" value="150" />
         </label>
       </div>
       <button type="submit" class="btn btn-lg btn-primary">產生</button>
