fix file reading

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         resolve(reader.result);
                     }
                     reader.onerror = reject;
-                    reader.readAsDataURL();
+                    reader.readAsDataURL(file);
                 }
             });
         }
