--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                     var result = {};
                     return Promise.map(['dashboard', 'plurk'], function(key) {
                         var options = getImageOptions(key);
+                        options.blurRadius = Math.ceil(imageData.width / 100);
                         generateBackground(key, options, imageData)
                             .then(toPng)
                             .then(uploadImage)
