--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
           
           <div class="form-group">
             <label>資訊面板背景亮度</label>
-            <input type="range" id="dashboard-brightness" min="-100" max="100" value="-25" />
+            <input type="range" id="dashboard-brightness" min="-100" max="100" value="-50" />
           </div>
 
           <div class="form-group">
             <label>噗文背景亮度</label>
-            <input type="range" id="plurk-brightness" min="-100" max="100" value="25" />
+            <input type="range" id="plurk-brightness" min="-100" max="100" value="50" />
           </div>
 
           <button type="submit" class="btn btn-lg btn-primary">生成</button>
@@ -99,7 +99,13 @@
 
                 ctx.putImageData(imageData, 0, 0);
 
-                return ctx.toBlob(resolve, 'image/png');
+                var FORMAT = 'image/png';
+
+                if (canvas.toBlob) {
+                    canvas.toBlob(resolve, FORMAT);
+                } else {
+                    resolve(canvas.toDataURL(FORMAT));
+                }
             });
         }
 
@@ -206,14 +212,15 @@
                     return Promise.map(['dashboard', 'plurk'], function(key) {
                         var options = getImageOptions(key);
                         options.blurRadius = Math.ceil(imageData.width / 100);
-                        generateBackground(key, options, imageData)
+                        return generateBackground(key, options, imageData)
                             .then(toPng)
                             .then(uploadImage)
                             .then(function(value) { images[key] = value; });
                     });
-                }).then(function() {
-                    console.log(images);
-                });
+                })
+                .return(images)
+                .then(console.log.bind(console))
+                .catch(console.log.bind(console));
         });
 
         $('#copy').click(function() {
